===============================================================
Tag name:  rtm1_0_02
Originator(s): tcraig
Date: Mon Aug 27, 2012
One-line Summary: Clean up, flood_present=false, remove land_frac
  usage, fix sign convention, set mask global, fix multi-instance,
  fix esmf.

M       src/cpl_share/rtm_cpl_indices.F90
M       src/cpl_mct/rof_comp_mct.F90
M       src/riverroute/RtmMod.F90
M       src/riverroute/RtmIO.F90
M       src/riverroute/RunoffMod.F90
M       src/cpl_esmf/rof_comp_mct.F90
M       src/cpl_esmf/rof_comp_esmf.F90
===============================================================
Tag name:  rtm1_0_01
Originator(s): mvertens (Mariana Vertenstein)
Date: Mon Aug 4
One-line Summary: First commit of rtm as a separate component

Purpose of changes:

First commit of rtm as a separate component

Requirements for tag:
    Requirements: test on bluefire (CESM)

Test level of tag: std-test

Bugs fixed (include bugzilla ID):

Known bugs (include bugzilla ID):
	
Known Limitations:
	
Describe any changes made to build system: 
   New introductin of cesm build scripts
	
Describe any changes made to the namelist: Yes!
   New introductin of namelist scripts

Describe any substantial timing or memory changes: No

Code reviewed by: self

List all files eliminated: None

List all files added and what they do:

List all existing files that have been modified, and describe the changes:

CESM or CLM tag used for the baseline comparison tests if applicable: 

Changes answers relative to baseline: Yes

===============================================================